Fix layout issue w/ seating-box.

--- a/css/supper-club.scss
+++ b/css/supper-club.scss
@@ -218,21 +218,26 @@ a {
     }
   }
 
-  .seating-box{
+  .seating-box {
     max-width: 731px;
     margin: 0 auto;
-    background-color: $black-color;
     border: 1px solid #888888;
     box-shadow: 0 0 20px rgba(0, 0, 0, .75);
 
-    h2{
-      margin: 10px 15px;
-    }
+    .heading {
+      padding: 0;
+      background-color: $black-color;
 
-    .sold-out {
-      color: #ff0000;
-      font-weight: 700;
-      text-transform: uppercase;
+      h2{
+        font-style: normal;
+        margin: 10px 15px;
+      }
+
+      .sold-out {
+        color: #ff0000;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
     }
 
     img {
